--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "employees-must-sql",
   "version": "1.0.0",
-  "description": "A database in postgres",
-  "main": "inquirer.js",
+  "description": "A database in postgres ## Description",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,8 @@
   "dependencies": {
     "inquirer": "^8.2.4",
     "pg": "^8.11.5",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.16.4"
+    
   }
 }
