--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A database in postgres ## Description",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +12,7 @@
   "dependencies": {
     "inquirer": "^8.2.4",
     "pg": "^8.11.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.16.4"
+    "dotenv": "^16.4.5"
     
   }
 }
